k8s/base/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  annotations:
    argocd.argoproj.io/sync-wave: '2'

spec:
  replicas: 2

  selector: 
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: ludoowg/monitoring-site-backend:latest

        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

  strategy:
    blueGreen:
      activeService: backend-service-active
      previewService: backend-service-preview
      autoPromotionEnabled: false
