k8s/base/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  annotations:
    argocd.argoproj.io/sync-wave: '2'


spec:
  replicas: 1

  selector: 
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: ludoowg/monitoring-site-frontend:latest

        ports:
        - containerPort: 80

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

  strategy:
    blueGreen:
      activeService: frontend-service-active
      previewService: frontend-service-preview
      autoPromotionEnabled: false
