k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-active
  labels:
    monitoring: backend-active
  annotations:
    argocd.argoproj.io/sync-wave: '2'

spec: 
  type: ClusterIP
  selector: 
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      

---


apiVersion: v1
kind: Service
metadata:
  name: backend-service-preview
  labels:
    monitoring: backend-preview
  annotations:
    argocd.argoproj.io/sync-wave: '2'

spec: 
  type: ClusterIP
  selector: 
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
