k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: postgres-service
  annotations:
    argocd.argoproj.io/sync-wave: '1'

spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
